Fix intro-modal interference with app init, by rendering everything as normal on init with intro-modal at highest z-index.

--- a/scss/components/introModal.scss
+++ b/scss/components/introModal.scss
@@ -8,6 +8,7 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
+	z-index: 99999;	// lift above map controls and introjs toggle buttons
 
 	background-color: rgba(219, 202, 166, 1.0);
 	text-align: center;
